--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenMCT Cesium Plugin - Test Harness</title>
+    <link rel="stylesheet" href="/snowTheme.css">
     <style>
         body, html {
             margin: 0;
@@ -23,48 +24,104 @@
     <div id="openmct"></div>
 
     <script type="module">
-        import openmct from 'openmct';
+        import * as openmctModule from 'openmct';
         import CesiumPlugin from './src/index.js';
 
-        // Create and configure OpenMCT instance
-        const app = openmct();
+        // Wait for DOM and CSS to be ready
+        window.addEventListener('load', () => {
+            // Add required OpenMCT class before initialization
+            document.body.classList.add('user-helper');
 
-        // Install the Cesium plugin
-        app.install(CesiumPlugin());
+            // Get OpenMCT instance - it can be a constructor OR a pre-instantiated object
+            let app;
 
-        // Create a simple root object for testing
-        const rootObject = {
-            identifier: {
-                namespace: 'test',
-                key: 'root'
-            },
-            name: 'Test Root',
-            type: 'folder',
-            composition: []
-        };
-
-        // Add a test object provider
-        app.objects.addProvider('test', {
-            get(identifier) {
-                if (identifier.key === 'root') {
-                    return Promise.resolve(rootObject);
+            // Check if default export is a constructor function
+            if (typeof openmctModule.default === 'function') {
+                try {
+                    app = openmctModule.default();
+                } catch (e) {
+                    console.error('Failed to call default constructor:', e);
+                    return;
                 }
-                // Return a test satellite object
-                return Promise.resolve({
-                    identifier: identifier,
-                    name: 'Test Satellite',
-                    type: 'satellite'
-                });
+            }
+            // Check if default export is already an instance (has OpenMCT methods)
+            else if (openmctModule.default && typeof openmctModule.default.install === 'function') {
+                app = openmctModule.default;
+            }
+            // Check if the module itself is a constructor
+            else if (typeof openmctModule === 'function') {
+                try {
+                    app = openmctModule();
+                } catch (e) {
+                    console.error('Failed to call module as constructor:', e);
+                    return;
+                }
+            }
+            // Maybe it's a global
+            else if (typeof window.openmct === 'function') {
+                app = window.openmct();
+            }
+            else {
+                console.error('Could not find OpenMCT constructor or instance', openmctModule);
+                return;
+            }
+
+            // Set asset path for OpenMCT icons and resources
+            app.setAssetPath('/node_modules/openmct/dist');
+
+            // Install default plugins that OpenMCT needs
+            app.install(app.plugins.LocalStorage());
+            app.install(app.plugins.MyItems());
+            app.install(app.plugins.UTCTimeSystem());
+
+            // Install the Cesium plugin
+            app.install(CesiumPlugin());
+
+            // Set up time conductor after plugins are installed
+            app.time.setClock('local');
+            const now = Date.now();
+            app.time.setTimeSystem('utc', {
+                start: now - 900000,  // 15 minutes ago
+                end: now
+            });
+
+            // Create a simple root object for testing
+            const rootObject = {
+                identifier: {
+                    namespace: 'test',
+                    key: 'root'
+                },
+                name: 'Test Root',
+                type: 'folder',
+                composition: []
+            };
+
+            // Add a test object provider
+            app.objects.addProvider('test', {
+                get(identifier) {
+                    if (identifier.key === 'root') {
+                        return Promise.resolve(rootObject);
+                    }
+                    // Return a test satellite object
+                    return Promise.resolve({
+                        identifier: identifier,
+                        name: 'Test Satellite',
+                        type: 'satellite'
+                    });
+                }
+            });
+
+            // Add root to tree
+            app.objects.addRoot(rootObject.identifier);
+
+            // Start OpenMCT
+            try {
+                app.start(document.getElementById('openmct'));
+                console.log('OpenMCT started successfully with Cesium plugin');
+            } catch (e) {
+                console.error('Failed to start OpenMCT:', e);
             }
         });
-
-        // Add root to tree
-        app.objects.addRoot(rootObject.identifier);
-
-        // Start OpenMCT
-        app.start(document.getElementById('openmct'));
-
-        console.log('OpenMCT started with Cesium plugin');
     </script>
 </body>
 </html>
