--- a/index.html
+++ b/index.html
@@ -93,32 +93,34 @@
         };
 
         // 6. Telemetry and Object Providers
-        openmct.telemetry.addProvider({
+       openmct.telemetry.addProvider({
             supportsSubscribe: (obj) => obj.type === 'satellite',
             supportsRequest: (obj) => obj.type === 'satellite',
             subscribe: (obj, callback) => {
                 const interval = setInterval(() => {
-                    const now = Date.now();
-                    callback({
-                        utc: now,
-                        'position.latitude': Math.sin(now / 10000) * 45,
-                        'position.longitude': (now / 500) % 360 - 180,
-                        'position.altitude': 400000
-                    });
+                    callback(generateMockPoint(Date.now()));
                 }, 1000);
                 return () => clearInterval(interval);
             },
             request: async (obj, opt) => {
                 let data = [];
-                for (let t = opt.start; t < opt.end; t += 10000) {
-                    data.push({
-                        utc: t, 'position.latitude': Math.sin(t / 10000) * 45,
-                        'position.longitude': (t / 500) % 360 - 180, 'position.altitude': 400000
-                    });
+                // High-resolution history: 1 point per second
+                for (let t = opt.start; t < opt.end; t += 1000) {
+                    data.push(generateMockPoint(t));
                 }
                 return data;
             }
         });
+
+        function generateMockPoint(t) {
+            return {
+                utc: t,
+                // Slower orbital math for a more realistic drift
+                'position.latitude': Math.sin(t / 40000) * 45, 
+                'position.longitude': (t / 2000) % 360 - 180,
+                'position.altitude': 400000
+            };
+        }
 
         openmct.objects.addProvider('test', {
             get: (identifier) => {
