updating to spherex name

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         const satelliteObject = {
             identifier: { namespace: 'test', key: 'sat-1' },
-            name: 'ISS (Mock)',
+            name: 'SphereX',
             type: 'satellite',
             modelUrl: '/Satellite.glb',
             modelScale: 2.0,
